# MealsRater_API_Django

./: Business_logic.txt  README.md  auth_policy.txt  pyproject.toml  requirements_local.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
mealrater/: settings.py  urls.py  wsgi.py
